--- a/watering-version/nodeserver/index.html
+++ b/watering-version/nodeserver/index.html
@@ -20,7 +20,7 @@
     <script>
       var socket = io();
      $('#water').click(function(){
-        socket.emit('WATER');
+        socket.emit('water');
       });
 
     </script>
